# Nominatim

./: .codespellrc  .env.example  .flake8  .gitignore  .gitmodules  .mypy.ini  .pylintrc  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Geocode.php  Makefile  Makefile.am  README  README.md  SECURITY.md  VAGRANT.md  Vagrantfile  autogen.sh  codecov.yml  configure.ac  mkdocs.yml  monaco-latest.osm.pbf  nominatim-cli.py  php-lint-rules.xml  phpcs.xml  phpunit.xml  pyproject.toml  setup.log~  transliteration.py  vagrant-provision.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
cmake/: paths-py-no-php.tmpl  paths-py.tmpl  script.tmpl  tool-installed.tmpl  tool.tmpl  website.tmpl
contrib/: openlayers.cfg
data/: address-levels.json  country_name.data  country_name.sql  country_naturalearthdata.data  country_naturalearthdata.sql  gb_postcode_table.sql  monaco.osm.pbf  specialphrases_countries.sql  us_postcode.sql  us_postcode_table.sql  words.sql
docs/: CMakeLists.txt  Faq.md  Import-and-Update.md  Import_and_update.md  Install-on-Centos-7.md  Install-on-Ubuntu-16.md  Installation.md  Migration.md  bash2md.sh  extra.css  gsoc22.md  index.md  install-on-centos-7.md  install-on-ubuntu-16.md  mk_install_instructions.py  mkdocs.yml  readme.md  requirements.txt  styles.css
lib/: AddressDetails.php  ClassTypes.php  Config.php  DB.php  DatabaseError.php  DebugHtml.php  DebugNone.php  Geocode.php  NearPoint.php  OutlineLookup.php  ParameterParser.php  Phrase.php  PlaceLookup.php  PoisNear.php  Result.php  SearchContext.php  (+23 more)
lib-lua/: flex-base.lua  import-address.lua  import-admin.lua  import-extratags.lua  import-full.lua  import-street.lua  taginfo.lua
lib-php/: AddressDetails.php  ClassTypes.php  DB.php  DatabaseError.php  DebugHtml.php  DebugNone.php  Geocode.php  ParameterParser.php  Phrase.php  PlaceLookup.php  Result.php  ReverseGeocode.php  SearchContext.php  SearchDescription.php  SearchPosition.php  Shell.php  SimpleWordList.php  SpecialSearchOperator.php  Status.php  TokenCountry.php  TokenHousenumber.php  TokenList.php  TokenPartial.php  TokenPostcode.php  TokenSpecialTerm.php  TokenWord.php  cmd.php  dotenv_loader.php  init-cmd.php  init-website.php  init.php  lib.php  log.php  output.php  setup_functions.php
lib-sql/: aux_tables.sql  functions.sql  grant-readonly.sql  grants.sql  indices.sql  indices.src.sql  partition-tables.src.sql  postcode_tables.sql  table-triggers.sql  tables.sql  tiger_import_finish.sql  tiger_import_start.sql  words.sql  words_from_search_name.sql
man/: CMakeLists.txt  create-manpage.py  create-manpage.tmpl  nominatim.1
nominatim/: CMakeLists.txt  Makefile.am  Makefile.in  __main__.py  api.py  cli.py  config.h.in  config.py  configure.ac  errors.py  export.c  export.h  import.c  import.h  index.c  index.h  input.c  input.h  nominatim-svn.sh  nominatim.c  nominatim.h  nominatim.py  nominatim.spec.in  partitionedtags.def  paths.py  postgresql.c  postgresql.h  sprompt.c  sprompt.h  tools.py  typing.py  version.py
nominatim/admin/: exec_utils.py
nominatim/api/: __init__.py  connection.py  core.py  localization.py  logging.py  lookup.py  result_formatting.py  results.py  reverse.py  status.py  types.py
nominatim/api/search/: __init__.py  db_search_builder.py  db_search_fields.py  db_search_lookups.py  db_searches.py  geocoder.py  icu_tokenizer.py  icu_tokenizer_japanese.py  icu_tokenizer_japanese2.py  icu_tokenizer_japanese_2.py  legacy_tokenizer.py  query.py  query_analyzer_factory.py  token_assignment.py
nominatim/api/v1/: __init__.py  classtypes.py  constants.py  format.py  format_json.py  format_xml.py  helpers.py  server_glue.py
nominatim/apicmd/: status.py
nominatim/clicmd/: __init__.py  add_data.py  admin.py  api.py  args.py  convert.py  export.py  freeze.py  get_version.py  index.py  refresh.py  replication.py  setup.py  special_phrases.py  transition.py
nominatim/data/: country_info.py  place_info.py  place_name.py  postcode_format.py
nominatim/db/: async_connection.py  async_core_library.py  connection.py  properties.py  sql_preprocessor.py  sqlalchemy_functions.py  sqlalchemy_schema.py  sqlalchemy_types.py  sqlite_functions.py  status.py  utils.py
nominatim/db/sqlalchemy_types/: __init__.py  geometry.py  int_array.py  json.py  key_value.py
nominatim/indexer/: db.py  indexer.py  place_info.py  progress.py  runners.py
nominatim/result_formatter/: base.py  v1.py
nominatim/server/falcon/: server.py
nominatim/server/sanic/: server.py
nominatim/server/starlette/: server.py
nominatim/tokenizer/: base.py  factory.py  icu_name_processor.py  icu_rule_loader.py  icu_token_analysis.py  icu_tokenizer.py  icu_variants.py  legacy_icu_tokenizer.py  legacy_tokenizer.py  place_sanitizer.py
nominatim/tokenizer/sanitizers/: base.py  clean_housenumbers.py  clean_postcodes.py  clean_tiger_tags.py  config.py  delete_tags.py  helpers.py  kanji_utils.py  split_name_list.py  strip_brace_terms.py  tag_analyzer_by_language.py  tag_japanese.py
nominatim/tokenizer/token_analysis/: base.py  config_variants.py  generic.py  generic_mutation.py  housenumbers.py  postcodes.py
nominatim/tools/: __init__.py  add_osm_data.py  admin.py  calculate_postcodes.py  check_database.py  collect_os_info.py  convert_sqlite.py  country_info.py  database_import.py  exec_utils.py  freeze.py  migration.py  postcodes.py  refresh.py  replication.py  special_phrases.py  tiger_data.py
nominatim/tools/special_phrases/: importer_statistics.py  sp_csv_loader.py  sp_importer.py  sp_loader.py  sp_wiki_loader.py  special_phrase.py  special_phrases_importer.py
nominatim/utils/: centroid.py  json_writer.py
nominatim/voronoi/: VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h  voronoi_main.cpp
packaging/nominatim-api/: README.md  pyproject.toml  settings
packaging/nominatim-api/extra_src/: paths.py
packaging/nominatim-core/: README.md  pyproject.toml
packaging/nominatim-db/: README.md  data  lib-lua  lib-sql  pyproject.toml
packaging/nominatim-db/extra_src/nominatim_db/: paths.py
packaging/nominatim-db/scripts/: nominatim
(+1223 files in other folders)
