[project]
name = "nominatim"
version = "5.3.0"
requires-python = ">=3.9"

dependencies = [
    "nominatim-api",
    "nominatim-db",
]

[tool.uv.workspace]
members = ["packaging/*"]

[tool.uv.sources]
nominatim-api = { workspace = true }
nominatim-db  = { workspace = true }

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "types" },
    { include-group = "docs" },
    { include-group = "serve" },
]

test = [
    "pytest",
    "pytest-asyncio",
    "pytest-bdd",
    "aiosqlite",
    "osmium",
]

lint = [
    "flake8",
]

types = [
    "mypy",
    "types-jinja2",
    "types-markupsafe",
    "types-psycopg2",
    "types-psutil",
    "types-Pygments",
    "types-PyYAML",
    "types-requests",
    "types-ujson",
    "types-urllib3",
    "typing-extensions",
]

docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-material",
]

serve = [
    "falcon",
    "starlette",
    "uvicorn",
]
